--- a/index.html
+++ b/index.html
@@ -17,22 +17,25 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Rutgers University graduate</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from Edison, NJ</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy playing sports and video games with family and friends</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Working as a Web Developer in the city</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Edison, NJ</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer because I enjoy problem solving and being creative. When a project is complete
+        I like to think back to all the challenges that I solved and then I get to enjoy the completed product.
+        Also, as a child growing up with the web, I've always wanted to make websites that aligned with my interests so that I could 
+        share them with people who have similar.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/nickjchin">Github</a></li>
         </ul>
     </footer>
 </body>
